# cad-viewer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  cad-viewer.toml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
examples/: param_demo.py
server/: pyproject.toml
server/cad_viewer/: __init__.py  params.py
server/cad_viewer_server/: __init__.py  __main__.py  builder.py  config.py  http_app.py  loader.py  mcp_app.py  paramstore.py  procbuild.py  references.py  render.py  state.py  watcher.py
src/: main.ts
src/lib/: CADViewer.svelte  CadStudio.svelte
src/lib/annotate/: freehand.ts
src/lib/components/: Toolbar.svelte
src/lib/persistence/: CADPersistence.ts
src/lib/three/: CameraController.ts  SceneManager.ts
