[project]
name = "cad-viewer-server"
version = "0.1.0"
description = "Live build123d viewer backend: HTTP/WS for the tablet + MCP for Claude, one process."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "mcp>=1.12,<2",
    "watchfiles>=0.24",
    "build123d>=0.10.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pillow>=10",
]

[project.scripts]
cad-viewer-serve = "cad_viewer_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cad_viewer_server"]
